--- a/templates/admin/adminloginbase.html
+++ b/templates/admin/adminloginbase.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Modernize Free</title>
-  <link rel="shortcut icon" type="image/png" href="{% static "dashboard/assets/images/logos/favicon.png" %}" />
-  <link rel="stylesheet" href="{% static "dashboard/assets/css/styles.min.css" %}" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'dashboard/assets/images/logos/favicon.png' %}" />
+  <link rel="stylesheet" href="{% static 'dashboard/assets/css/styles.min.css' %}" />
 </head>
 
 <body>
