--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -7,8 +7,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Modernize Free</title>
-  <link rel="shortcut icon" type="image/png" href="{% static "dashboard/assets/images/logos/favicon.png" %}" />
-  <link rel="stylesheet" href="{% static "dashboard/assets/css/styles.min.css" %}" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'dashboard/assets/images/logos/favicon.png' %}" />
+  <link rel="stylesheet" href="{% static 'dashboard/assets/css/styles.min.css' %}" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <style>
@@ -103,7 +104,7 @@
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
           <a href="./index.html" class="text-nowrap logo-img">
-            <img src="{% static "dashboard/assets/images/logos/dark-logo.svg" %}" width="180" alt="" />
+            <img src="{% static 'dashboard/assets/images/logos/dark-logo.svg' %}" width="180" alt="" />
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
             <i class="ti ti-x fs-8"></i>
@@ -249,11 +250,11 @@
           </ul>
           <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
             <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-              <a href="https://adminmart.com/product/modernize-free-bootstrap-admin-dashboard/" target="_blank" class="btn btn-primary">Download Free</a>
+              <!-- <a href="https://adminmart.com/product/modernize-free-bootstrap-admin-dashboard/" target="_blank" class="btn btn-primary">Download Free</a> -->
               <li class="nav-item dropdown">
                 <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  <img src="{% static "dashboard/assets/images/profile/user-1.jpg" %}" alt="" width="35" height="35" class="rounded-circle">
+                  <img src="{% static 'dashboard/assets/images/profile/user-1.jpg' %}" alt="" width="35" height="35" class="rounded-circle">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                   <div class="message-body">
@@ -269,7 +270,7 @@
                       <i class="ti ti-list-check fs-6"></i>
                       <p class="mb-0 fs-3">My Task</p>
                     </a>
-                    <a href="{% url "adminlogout" %}" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
+                    <a href="{% url 'adminlogout' %}" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
                   </div>
                 </div>
               </li>
@@ -283,18 +284,19 @@
     {% block body %}     {% endblock  %}
 
     <div class="py-6 px-6 text-center">
-    <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank" class="pe-1 text-primary text-decoration-underline">AdminMart.com</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a></p>
+    <!-- <p class="mb-0 fs-4">Design and Developed by <a href="https://adminmart.com/" target="_blank" class="pe-1 text-primary text-decoration-underline">AdminMart.com</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a></p> -->
     </div>
 </div>
 </div>
 </div>
-<script src="{% static "dashboard/assets/libs/jquery/dist/jquery.min.js" %}"></script>
-<script src="{% static "dashboard/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js" %}"></script>
-<script src="{% static "dashboard/assets/js/sidebarmenu.js" %}"></script>
-<script src="{% static "dashboard/assets/js/app.min.js" %}"></script>
-<script src="{% static "dashboard/assets/libs/apexcharts/dist/apexcharts.min.js" %}"></script>
-<script src="{% static "dashboard/assets/libs/simplebar/dist/simplebar.js" %}"></script>
-<script src="{% static "dashboard/assets/js/dashboard.js" %}"></script>
+
+<script src="{% static 'dashboard/assets/libs/jquery/dist/jquery.min.js' %}"></script>
+<script src="{% static 'dashboard/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'dashboard/assets/js/sidebarmenu.js' %}"></script>
+<script src="{% static 'dashboard/assets/js/app.min.js' %}"></script>
+<script src="{% static 'dashboard/assets/libs/apexcharts/dist/apexcharts.min.js' %}"></script>
+<script src="{% static 'dashboard/assets/libs/simplebar/dist/simplebar.js' %}"></script>
+<script src="{% static 'dashboard/assets/js/dashboard.js' %}"></script>
 </body>
 
 </html>
