--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -142,6 +142,16 @@
                 <span class="hide-menu">Category</span>
               </a>
             </li>
+            
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'brand' %}" aria-expanded="false"> 
+                <span>
+                  <i class="ti ti-aperture"></i>
+                </span>
+                <span class="hide-menu">Brand</span>
+              </a>
+            </li>
+
             <li class="sidebar-item">
               {% comment %} <a class="sidebar-link" href="{% url 'product' %}" aria-expanded="false"> {% endcomment %}
                 <span>
