--- a/templates/admin/adminbrand.html
+++ b/templates/admin/adminbrand.html
@@ -2,8 +2,8 @@
 {% block title %}brand{% endblock  %}
 {% block body %}
 <!-- Button trigger modal -->
-<a type="button" class="btn btn-secondary w-60" style="margin-top: 80px;margin-left: 10px;" data-bs-toggle="modal" data-bs-target="#addCategory">
-  <i title="Add Category" class="fa fa-plus">Add brand</i>
+<a type="button" class="btn btn-secondary w-60" style="margin-top: 80px;margin-left: 10px;" data-bs-toggle="modal" data-bs-target="#addbrand">
+  <i title="Add brand" class="fa fa-plus">Add brand</i>
 </a>
 {% if messages %}
 
@@ -16,11 +16,11 @@
 {% endif %}
 
 <!--Add brand  Modal -->
-<div class="modal fade" id="addCategory" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="addbrand" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title fs-5" id="exampleModalLabel">Add Category</h1>
+      <h1 class="modal-title fs-5" id="exampleModalLabel">Add brand</h1>
       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -41,16 +41,16 @@
   </div>
 </div>
 </div>
-<!--end of add Category modal-->
+<!--end of add brand modal-->
 
 <div class="pagetitle pt-3 ps-5">
   <div class="shop__sidebar__search me-4" style="float: right;">
-    <form action="{% url 'searchcategory' %}">
+    <form action="{% url 'searchbrand' %}">
       <input type="text" placeholder="Search..." name="keyword" style="border-radius: 20px; height: 40px; text-align: center; font-size: 16px;">
       <button type="submit"><span <i class="bi bi-search"></i>></span></button>
     </form>
   </div>
-  <h1 style="font-weight: bold;">Category</h1>
+  <h1 style="font-weight: bold;">brand</h1>
 </div><!-- End Page Title -->
 
 <section class="section dashboard">
@@ -69,18 +69,16 @@
                 <thead>
                   <tr>
                     <th scope="col">id</th>
-                    <th scope="col">Category name</th>
-                    <th scope="col">Discription</th>
+                    <th scope="col">brand name</th>
                     <th scope="col">Action</th>
                   </tr>
                 </thead>
-                
-                {% for c in category %}
+                <!-- passing dictionary -->
+                {% for b in brand %}
 
                   <tr>
-                    <td>  {{c.id}}  </td>
-                    <td>  {{c.categories}} </td>
-                    <td>  {{c.categories_description}} </td>
+                    <td>  {{b.id}}  </td>
+                    <td>  {{b.name}} </td>
                     <!-- edit -->
                     <td>
                       <!-- Button trigger modal -->
@@ -93,21 +91,18 @@
 
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Category</h1>
+                              <h1 class="modal-title fs-5" id="exampleModalLabel">Edit brand</h1>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                              <form  method="POST" action="{% url 'editcategory' c.id %}"  enctype="multipart/form-data">
+                              <form  method="POST" action="{% url 'editbrand' b.id %}"  enctype="multipart/form-data">
                                 {% csrf_token %}
   
                                 <div class="form-outline mb-4">
-                                  <input name='categories' value="{{c.categories}}"  type="text" id="form3Example3cg" class="form-control form-control-lg" />
-                                  <label class="form-label" for="form3Example3cg">Category name</label>
+                                  <input name='name' value="{{b.name}}"  type="text" id="form3Example3cg" class="form-control form-control-lg" />
+                                  <label class="form-label" for="form3Example3cg">brand name</label>
                                 </div>
-                              <div class="form-outline mb-4">
-                                <input name='categories_description' value="{{c.categories_description}}"  type="text" id="form3Example3cg" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example3cg">Discription</label>
-                              </div>
+                            
                                <div class="d-flex justify-content-center">
                                   <button type="submit"
                                     class="btn btn-danger btn-lg gradient-custom-4 w-50 text-light" type="submit" >Save Changes</button>
@@ -125,7 +120,7 @@
                           Delete
                         </button>
                     </td>
-                        <!-- Modal  for delete the Category -->
+                        <!-- Modal  for delete the brand -->
                         <div class="modal fade" id="exampleModal{{forloop.counter}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                           <div class="modal-dialog">
                             <div class="modal-content">
@@ -134,10 +129,10 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
-                                delete Category {{c.categories }}
+                                delete brand {{b.brand }}
                               </div>
                               <div class="modal-footer">
-                                <form action="{% url 'deletecategory' c.id %}" >
+                                <form action="{% url 'deletebrand' b.id %}" >
                                     
                                   <button type="submit" class="btn btn-danger">Confirm</button>
                                 </form>
@@ -164,7 +159,7 @@
       </div>
 
       {% if message %}
-      <div class="message"><a href="{%url 'categories'%}"><h1 class="font-weight-bold text-center pt-5" style="color: #403c3c52;font-weight: bold;">{{ message }}</h4> </a></div>
+      <div class="message"><a href="{%url 'brand'%}"><h1 class="font-weight-bold text-center pt-5" style="color: #403c3c52;font-weight: bold;">{{ message }}</h4> </a></div>
      {% endif %}
 
 {% endblock  %}
