products and variants html adding

--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -153,7 +153,7 @@
             </li>
 
             <li class="sidebar-item">
-              {% comment %} <a class="sidebar-link" href="{% url 'product' %}" aria-expanded="false"> {% endcomment %}
+               <a class="sidebar-link" href="{% url 'product' %}" aria-expanded="false"> 
                 <span>
                   <i class="ti ti-shopping-cart"></i>
                 </span>
