--- a/templates/admin/adminbrand.html
+++ b/templates/admin/adminbrand.html
@@ -78,7 +78,7 @@
 
                   <tr>
                     <td>  {{b.id}}  </td>
-                    <td>  {{b.name}} </td>
+                    <td>  {{b.names}} </td>
                     <!-- edit -->
                     <td>
                       <!-- Button trigger modal -->
