--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -161,6 +161,15 @@
               </a>
             </li>
 
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'variant' %}" aria-expanded="false"> 
+               <span>
+                 <i class="ti ti-file-description"></i>
+               </span>
+               <span class="hide-menu">Variants</span>
+             </a>
+           </li>
+
 
             {% comment %} not using  now {% endcomment %}
 
@@ -169,7 +178,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="./ui-forms.html" aria-expanded="false">
                 <span>
-                  <i class="ti ti-file-description"></i>
+                  <i class=""></i>
                 </span>
                 <span class="hide-menu">Forms</span>
               </a>
