--- a/templates/admin/adminproductview.html
+++ b/templates/admin/adminproductview.html
@@ -2,7 +2,6 @@
 {% block title %}image view{% endblock %}
 {% load static %}
 {% block body %}
-
 <section class="content-main">
     <div class="content-header">
         <div>
@@ -13,7 +12,7 @@
     </div>
     <div class="card mb-4">
         <header class="card-header">
-            <div class="row gx-3">
+            <div class="row gx-3" style="margin-top: 85px;">
                 <div class="col-lg-2 col-6 col-md-3">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#addCategory">
                         <button type="submit" class="btn btn-primary"><i class="ti ti-plus"></i> Add variant</button>
@@ -51,6 +50,8 @@
 
                         </tr>
                     </thead>
+                   
+
                     <tbody>
                         {% for c in variant_list.variant %}
                         <tr class="text-uppercase">
@@ -218,12 +219,12 @@
             </div>
             <div class="modal-body">
 
-                <form action="{% url 'add_Product_Variant' %}" enctype="multipart/form-data" method="POST">
+                <form action="{% url 'addproductvariant' %}" enctype="multipart/form-data" method="POST">
                     {% csrf_token %}
                     <div style="width: 100px;" class="">
                     </div>
                     <div class="form-outline mb-4">
-                        <label class="form-label" for="form3Example3cg">Variant Name</label>
+                        <label class="form-label" for="form3Example3cg">Variant/Product Name</label>
                         <select class="form-select" name="variant_name">
                             {% for c in variant_list.product %}
                             <option value="{{ c.id }}">{{ c.product_name }}</option>
