--- a/templates/admin/adminproductview.html
+++ b/templates/admin/adminproductview.html
@@ -58,7 +58,7 @@
                             <td><b>{{ c.id }}</b></td>
                             <td><b>{{ c.product.product_name }}</b></td>
                             <td><b>{{ c.color.color_name }}</b></td>
-                            <td><b>{{ c.size.size_range }}</b></td>
+                            <td><b>{{ c.size.size_chart }}</b></td>
                             <td><b>{{ c.quantity }}</b></td>
                             <td><b>{{ Action }}</b></td>
                             <td>
