--- a/templates/admin/sizemanagement.html
+++ b/templates/admin/sizemanagement.html
@@ -35,11 +35,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for c in products_size %}
+                        {% for c in product_size %}
                         <tr class="text-uppercase">
                             <td> {{c.id}} </td>
                            
-                            <td> {{c.size_range}} </td>
+                            <td> {{c.size_chart}} </td>
             
                             <td>
                                 <!-- Button trigger modal -->
