--- a/static/dashboard/assets/scss/variables/_variables.scss
+++ b/static/dashboard/assets/scss/variables/_variables.scss
@@ -13,7 +13,7 @@ $gray-500: #5A6A85 !default;
 $gray-600: #2A3547 !default;
 $black: #000 !default;
 
-// Color
+// Colors
 $blue: #5D87FF !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
