--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -161,14 +161,14 @@
               </a>
             </li>
 
-            <li class="sidebar-item">
+            <!-- <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'productvariant' %}" aria-expanded="false"> 
                <span>
                  <i class="ti ti-file-description"></i>
                </span>
                <span class="hide-menu">Variants</span>
              </a>
-           </li>
+           </li> -->
 <!-- qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq -->
            <li class="sidebar-item">
             <a class="sidebar-link" href="{% url 'productsize' %}" aria-expanded="false"> 
