--- a/templates/admin/sizemanagement.html
+++ b/templates/admin/sizemanagement.html
@@ -13,7 +13,7 @@
     </div>
     <div class="card mb-4">
         <header class="card-header">
-            <div class="row gx-3" style="margin-top: 95px;>
+            <div class="row gx-3" style="margin-top: 95px;">
                 <div class="col-lg-2 col-6 col-md-3">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#addCategory">
                         <button type="submit" class="btn btn-primary"><i class="ti ti-plus"></i> Add Size</button>
