--- a/templates/admin/adminproductview.html
+++ b/templates/admin/adminproductview.html
@@ -235,7 +235,7 @@
                         <label class="form-label" for="form3Example3cg">Size</label>
                         <select class="form-select" name="variant_size">
                             {% for c in variant_list.size_range %}
-                            <option value="{{ c.id }}">{{ c.size_range }}</option>
+                            <option value="{{ c.id }}">{{ c.size_chart }}</option>
                             {% endfor %}
                         </select>
                     </div>
