--- a/templates/admin/adminproductview.html
+++ b/templates/admin/adminproductview.html
@@ -86,7 +86,7 @@
                                                     aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
-                                                <form action="{% url 'edit_prodectvariant' c.id %}"
+                                                <form action="{% url 'editproductvariant' c.id %}"
                                                     enctype="multipart/form-data" method="POST">
                                                     {% csrf_token %}
                                                     <div style="width: 100px;" class="">
@@ -173,7 +173,7 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <!-- one here -->
-                                                <form action="{% url 'prodectvariant_delete' c.id %}">
+                                                <form action="{% url 'productvariantdelete' c.id %}">
 
                                                     <button type="submit" class="btn btn"
                                                         style="background-color: rgb(239, 7, 54); color:rgb(255, 255, 255)">Confirm</button>
@@ -187,7 +187,7 @@
                                 </div>
 
                             </td>
-                            <td> <a href="{% url 'image_list' c.id %}"><button type="button" class="btn btn c"
+                            <td> <a href="{% url 'imagelist' c.id %}"><button type="button" class="btn btn c"
                                         style="background-color: rgb(86, 168, 255); color:rgb(255, 255, 255)"
                                         data-bs-toggle="modal">
                                         <i class="ti ti-photo"></i>
