--- a/templates/user/home/index.html
+++ b/templates/user/home/index.html
@@ -89,21 +89,21 @@
                     <div class="tab-pane p-0 fade show active" id="top-all-tab" role="tabpanel" aria-labelledby="top-all-link">
                         <div class="products just-action-icons-sm">
                             <div class="row">
+                                {%for c in variant_images %}
                             
                                 <div class="col-6 col-md-4 col-lg-3 col-xl-5col">
 
-                                    {%for prod in variant_images %}
-
                                     <div class="product product-3 text-center">
                                         <figure class="product-media">
-                                            <span class="product-label label-primary">Sale</span>
-                                            <span class="product-label label-sale">30% off</span>
-                                            <a href="{% url "" %}">
-                                                <img src="{{c.image.url }} " alt="Product image" class="product-image">
+                                            {% comment %} <span class="product-label label-primary">Sale</span>
+                                            <span class="product-label label-sale">30% off</span> {% endcomment %}
+                                             <a href="{% url 'productshow' c.variant.product.id c.variant.id %}">
+
+                                                <img src="{{c.image.url }}" alt="Product image" class="product-image">
                                             </a>
 
                                             <div class="product-action-vertical">
-                                                <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
+                                                <a href="" class="btn-product-icon btn-wishlist btn-expandable"  data-product_id="{{c.variant.id}}"><span>add to wishlist</span></a>
                                             </div><!-- End .product-action-vertical -->
                                         </figure><!-- End .product-media -->
 
@@ -112,10 +112,11 @@
                                                 <a href="#">Men’s</a>,
                                                 <a href="#">Sneakers</a>
                                             </div><!-- End .product-cat -->
-                                            <h3 class="product-title"><a href="product.html">ASICS Tiger Gel-Lyte MT</a></h3><!-- End .product-title -->
+                                            <h3 class="product-title"><a href="#">{{c.variant.product.product_name}}</a></h3><!-- End .product-title -->
                                             <div class="product-price">
-                                                <span class="new-price">Now $77.99</span>
-                                                <span class="old-price">$130.00</span>
+
+                                                <span class="new-price">${{c.variant.product.product_price}}</span>
+                                        
                                             </div><!-- End .product-price -->
                                         </div><!-- End .product-body -->
 
@@ -128,100 +129,24 @@
                                             </div><!-- End .rating-container -->
 
                                             <div class="product-nav product-nav-dots">
-                                                <a href="#" class="active" style="background: #af5f23;"><span class="sr-only">Color name</span></a>
-                                                <a href="#" style="background: #806f55;"><span class="sr-only">Color name</span></a>
-                                                <a href="#" style="background: #333333;"><span class="sr-only">Color name</span></a>
+                                               <a href="#" id="colorLink{{ forloop.counter }}"><span class="sr-only"></span></a>
+                                                <script>
+                                                    var colorCode = "{{ c.variant.color.color_code }}";
+                                                    var colorLink = document.getElementById("colorLink{{ forloop.counter }}");
+                                                    colorLink.style.background = colorCode;
+                                                </script>
                                             </div><!-- End .product-nav -->
 
                                             <div class="product-action">
-                                                <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
-                                                <a href="popup/quickView.html" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a>
-                                            </div><!-- End .product-action -->
-                                        </div><!-- End .product-footer -->
-                                    </div><!-- End .product -->
-
-                                    {% endfor %}
-
-                                </div><!-- End .col-6 col-md-4 col-lg-3 -->
-
-                                <div class="col-6 col-md-4 col-lg-3 col-xl-5col">
-                                    <div class="product product-3 text-center">
-                                        <figure class="product-media">
-                                            <span class="product-label label-primary">New</span>
-                                            <a href="product.html">
-                                                <img src="{% static 'template/assets/images/demos/demo-10/products/product-13.jpg' %}" alt="Product image" class="product-image">
-                                            </a>
-
-                                            <div class="product-action-vertical">
-                                                <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
-                                            </div><!-- End .product-action-vertical -->
-                                        </figure><!-- End .product-media -->
-
-                                        <div class="product-body">
-                                            <div class="product-cat">
-                                                <a href="#">Women’s</a>,
-                                                <a href="#">Mules</a>
-                                            </div><!-- End .product-cat -->
-                                            <h3 class="product-title"><a href="product.html">Crocs Crocband Clog</a></h3><!-- End .product-title -->
-                                            <div class="product-price">
-                                                $25.75
-                                            </div><!-- End .product-price -->
-                                        </div><!-- End .product-body -->
-
-                                        <div class="product-footer">
-                                            <div class="ratings-container">
-                                                <div class="ratings">
-                                                    <div class="ratings-val" style="width: 40%;"></div><!-- End .ratings-val -->
-                                                </div><!-- End .ratings -->
-                                                <span class="ratings-text">( 7 Reviews )</span>
-                                            </div><!-- End .rating-container -->
-
-                                            <div class="product-action">
-                                                <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
-                                                <a href="popup/quickView.html" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a>
+                                                <input type="hidden"  value="{{ c.variant.size.id }}" id="size-input" >
+                                                <a href="" data-product_id="{{ c.variant.id }}" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
+                                                {% comment %} <a href="popup/quickView.html" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a> {% endcomment %}
                                             </div><!-- End .product-action -->
                                         </div><!-- End .product-footer -->
                                     </div><!-- End .product -->
                                 </div><!-- End .col-6 col-md-4 col-lg-3 -->
+                                {% endfor %}
 
-                                <div class="col-6 col-md-4 col-lg-3 col-xl-5col">
-                                    <div class="product product-3 text-center">
-                                        <figure class="product-media">
-                                            <a href="product.html">
-                                                <img src="{% static 'template/assets/images/demos/demo-10/products/product-14.jpg' %}" alt="Product image" class="product-image">
-                                            </a>
-
-                                            <div class="product-action-vertical">
-                                                <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
-                                            </div><!-- End .product-action-vertical -->
-                                        </figure><!-- End .product-media -->
-
-                                        <div class="product-body">
-                                            <div class="product-cat">
-                                                <a href="#">Men’s</a>,
-                                                <a href="#">Boots</a>
-                                            </div><!-- End .product-cat -->
-                                            <h3 class="product-title"><a href="product.html">Vasque Sundowner GTX</a></h3><!-- End .product-title -->
-                                            <div class="product-price">
-                                                $109.99
-                                            </div><!-- End .product-price -->
-                                        </div><!-- End .product-body -->
-
-                                        <div class="product-footer">
-                                            <div class="ratings-container">
-                                                <div class="ratings">
-                                                    <div class="ratings-val" style="width: 0%;"></div><!-- End .ratings-val -->
-                                                </div><!-- End .ratings -->
-                                                <span class="ratings-text">( 0 Reviews )</span>
-                                            </div><!-- End .rating-container -->
-
-                                            <div class="product-action">
-                                                <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
-                                                <a href="popup/quickView.html" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a>
-                                            </div><!-- End .product-action -->
-                                        </div><!-- End .product-footer -->
-                                    </div><!-- End .product -->
-                                </div><!-- End .col-6 col-md-4 col-lg-3 -->
                             </div><!-- End .row -->
                         </div><!-- End .products -->
                     </div><!-- .End .tab-pane -->
